[gd_scene load_steps=11 format=3 uid="uid://wdjwfpa5g8le"]

[ext_resource type="Script" path="res://Escenas/Menus/txtBtn.gd" id="1_rqy1f"]
[ext_resource type="AudioStream" uid="uid://beq5dwheh53fp" path="res://Escenas/Menus/sfx/button_standard.wav" id="2_13h2f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r78jv"]
resource_local_to_scene = true
bg_color = Color(0.301961, 0.27451, 0.278431, 0.862745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w1op7"]
resource_local_to_scene = true
bg_color = Color(0.301961, 0.27451, 0.278431, 0.862745)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sj14x"]
content_margin_left = 20.0
bg_color = Color(1, 0.32549, 0.384314, 0.498039)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.729412, 0.870588, 0, 1)
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1g2l"]
resource_local_to_scene = true
draw_center = false
shadow_color = Color(1, 1, 1, 1)
shadow_size = 5

[sub_resource type="Animation" id="Animation_xoffw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_3oefe"]
resource_name = "slideIn"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_styles/normal:content_margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.0, 20.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:theme_override_styles/hover:content_margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.0, 20.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:theme_override_styles/focus:content_margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.0, 20.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:theme_override_constants/outline_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_pir6s"]
resource_name = "slideOut"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_styles/normal:content_margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20.0, -1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:theme_override_styles/hover:content_margin_left")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20.0, -1.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:theme_override_styles/focus:content_margin_left")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [20.0, -1.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:theme_override_constants/outline_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sqyyo"]
_data = {
"RESET": SubResource("Animation_xoffw"),
"slideIn": SubResource("Animation_3oefe"),
"slideOut": SubResource("Animation_pir6s")
}

[node name="Button" type="Button"]
offset_right = 832.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
theme_override_styles/normal = SubResource("StyleBoxFlat_r78jv")
theme_override_styles/hover = SubResource("StyleBoxFlat_w1op7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_sj14x")
theme_override_styles/focus = SubResource("StyleBoxFlat_m1g2l")
action_mode = 0
alignment = 2
expand_icon = true
script = ExtResource("1_rqy1f")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.594
anchor_top = 0.5
anchor_right = 0.594
anchor_bottom = 0.5
offset_left = -90.208
offset_top = -29.0
offset_right = 67.792
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 40
text = "btntxt
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_sqyyo")
}

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_13h2f")
bus = &"SFX"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
